--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,12 @@ scriptgen/*
 build/
 parsetab.py
 parsetab.pyc
+
+
+# the generated run scripts
+scriptgen/
+sgx_nic/results/
+sgx_nic/scriptgen/
+sgx_nic/m5out/
+sgx_nic/stderr/
+sgx_nic/stdout/
