try to supress SIM_PRINT, using 1600mhz dram, update cache size and mem size

--- a/ext/DRAMSim2/ini/DDR3_micron_16M_8B_x8_sg15.ini
+++ b/ext/DRAMSim2/ini/DDR3_micron_16M_8B_x8_sg15.ini
@@ -6,7 +6,8 @@ DEVICE_WIDTH=16
 ;in nanoseconds
 ;#define REFRESH_PERIOD 7800
 REFRESH_PERIOD=7800
-tCK=1.5 ;*
+;tCK=1.5 ;*
+tCK=0.625 ;*
 
 CL=10 ;*
 AL=0 ;*
